Purchased saved between loads

--- a/index.html
+++ b/index.html
@@ -566,12 +566,12 @@
               <img v-if="!ingredient.purchased"
                    v-show="hoveredItem===ingredient"
                    @click="changePurchased(ingredient)"
-                   src="img/icon/outline_check_circle_black_24dp.png"
+                   src="img/icon/outline_radio_button_unchecked_black_24dp.png"
                    alt="check">
               <img v-if="ingredient.purchased"
                    v-show="hoveredItem===ingredient"
                    @click="changePurchased(ingredient)"
-                   src="img/icon/outline_clear_black_24dp.png"
+                   src="img/icon/outline_check_circle_black_24dp.png"
                    alt="uncheck">
             </li>
           </ul>
@@ -591,7 +591,7 @@
             },
             changePurchased(ingredient) {
                 ingredient.purchased = !ingredient.purchased
-                eventBus.$emit('update-ingredients')
+                eventBus.$emit('update-recipes')
             }
         },
         mounted() {
